--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio - Nabid Hasan Sany</title>
 </head>
 <body>
     <header class="container">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <img class="logo" src="./Image/logo.jpg" alt="">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -26,13 +25,13 @@
                     <a class="nav-link active" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="#services">Service</a>
+                    <a class="nav-link active" href="#skills">Skills</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">Contact</a>
+                    <a class="nav-link active" href="#projects">Projects</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">About Me</a>
+                    <a class="nav-link active" href="#contact">Contact</a>
                   </li>
                 </ul>
               </div>
@@ -43,22 +42,28 @@
        <section class="container mt-5">
            <div class="row">
                <div class="col-lg-8 col-sm-6 col-md-6 mt-5 p-5">
-                   <h1>Hey, I'm Nabid Hasan Sany <br><span><h2>Web Developer From Dhaka,<br>Bangladesh</h2></span></h1>
-                   <a class="btn btn-dark mt-2" href="">Contact Me</a>
+                   <h1>Hi, I'm Nabid Hasan Sany <br><span><h2>Web Developer From Dhaka,<br>Bangladesh</h2></span></h1>
+                   <p class="fs-3">nabid.hasan909gmail.com | 01924205095</p>
                </div>
                <div class="col-lg-4 col-sm-6 col-md-6">
                    <img class="img-fluid me-5" src="./Image/img-1.jpg" alt="">
                </div>
            </div>
        </section>
-       <section class="container mt-5">
+       <section id="contact" class="container mt-5">
            <div class="row">
             <div class="col-lg-7 col-sm-12 mt-5">
                 <img class="img-fluid" src="./Image/img-3.jpg" alt="">
             </div>
                <div id="header-text-1" class="col-lg-5 col-sm-12 mt-5">
-                   <h1>I Create Custom Website To Help Buisness To Better Online</h1>
-                   <a class="btn btn-dark mt-2" href="#projects">My Projects</a>
+                   <h1>I am currently studying Computer Science and working as a Web Developer
+                  </h1>
+                   <div class="mt-3 mx-2">
+                    <a target="_blank" href="https://www.facebook.com/nabidxii.44"><i class="fa-brands fa-facebook text-dark p-2 fs-2"></i></a>
+                    <a target="_blank" href="https://github.com/nabid050"><i class="fa-brands fa-github text-dark p-2 fs-2"></i></a>
+                    <a href="https://www.linkedin.com/in/nabid-hasan-sany-a37180203/"><i class="fa-brands fa-linkedin p-2 text-dark fs-2"></i></a> 
+                    <i class="fa-brands fa-twitter p-2 fs-2"></i>
+                </div>
                </div>
            </div>
        </section>
@@ -82,54 +87,52 @@
               </div>
            </div>
        </section>
-       <section id="#services" class="container">
-        <h1 class="text-center mt-5">Services</h1>
+       <section class="container">
+        <h1 class="text-center mt-5">Education</h1>
         <div class="row mt-5">
-           <div class="col-lg-6 col-sm-12">
-             <img id="service-img" class="image-fluid" src="./Image/download.jpg" alt="">
-           </div>
-           <div class="col-lg-6 col-sm-12 text-center">
+           <div class="col-lg-4 col-sm-12 text-center">
               <div class="mt-5">
-                <h1>1.Responsive Web Design</h1>
-                <h1>2.Front End Development</h1>
-                <h1>3.SEO Customization</h1>
+                <h3>Central University Of Science and Technology</h3>
+                <h4>Bachelor of Science</h4>
+                <h5>Computer Science and Engineering</h4>
+                <h6>2020 - Running</h6>
               </div>
-              <div class="d-flex text-light justify-content-around mt-5">
-                <h3 class="card bg-danger">Basic-50$</h3>
-                <h3 class="card bg-secondary">Advanced-100$</h3>
-                <h3 class="card bg-info">Premium-250$</h3>
+           </div>
+           <div class="col-lg-4 col-sm-12 text-center">
+              <div class="mt-5">
+                <h3>College Of Finance and Management</h3>
+                <h4>Higher Secondery Certificate</h4>
+                <h5>Group: Science</h4>
+                <h6>GPA: 2.67</h6>
+              </div>
+           </div>
+           <div class="col-lg-4 col-sm-12 text-center">
+              <div class="mt-5">
+                <h3>Alhaj Jafar Bepari High School</h3>
+                <h4>Secondery School Certificate</h4>
+                <h5>Group: Science</h4>
+                <h6>GPA: 4.32</h6>
               </div>
            </div>
         </div>
        </section>
-       <section class="container mt-5">
-        <h1 class="text-center">Customer's Reviews</h1>
-         <div class="row mt-5 text-center">
-            <div class="col-lg-6 col-sm-12">
-                <i class="fa-solid fa-quote-left"></i>
-                <h4>I took service from him for the first time. His dedication and manners were very good. Hope the quality of work will remain intact in the days to come.</h4>
-                <h5>Shawn Anderson</h5>
-                <h6>Denver, Colorado</h6>
-            </div>
-            <div class="col-lg-6 col-sm-12">
-                <i class="fa-solid fa-quote-left"></i>
-                <h4>I have been working with him for the past 5 years. He completed every project very well. I am grateful to him for that. I wish him success</h4>
-                <h5>Richard Drabikowski</h5>
-                <h6>New Orleans, Lousiana</h6>
-            </div>
-         </div>
+       <section id="skills" class="container mt-5">
+        <h1 class="text-center">Skills</h1>
+        <div class="text-center p-3 fs-1">
+          <i class="fa-brands fa-html5 p-3"></i>
+          <i class="fa-brands fa-css3-alt p-3"></i>
+          <i class="fa-brands fa-bootstrap p-3"></i>
+          <i class="fa-brands fa-wordpress p-3"></i>
+          <i class="fa-brands fa-js p-3"></i>
+          <i class="fa-brands fa-java p-3"></i>
+          <i class="fa-brands fa-python p-3"></i>
+        </div>
        </section>
     </main>
     <footer class="bg-dark mt-5 text-center text-light p-5">
         <h5>DwarfCoder Inc</h1>
         <h5>Savar-1344 | Dhaka | Bangladesh</h1>
         <h5>Privacy Policy | Terms Of Use</h5>  
-        <div class="mt-3 mx-2">
-            <i class="fa-brands fa-facebook fs-2"></i>
-            <i class="fa-brands fa-github fs-2"></i>
-            <i class="fa-brands fa-linkedin fs-2"></i>
-            <i class="fa-brands fa-twitter fs-2"></i>
-        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
