--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <header class="container">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
+              <img class="image-fluid nav-img" src="./Image/logo.jpg" alt="">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -44,7 +45,7 @@
            <div class="row">
                <div class="col-lg-8 col-sm-6 col-md-6 mt-5 p-5">
                    <h1>Hi, I'm Nabid Hasan Sany <br><span><h2>Web Developer From Dhaka,<br>Bangladesh</h2></span></h1>
-                   <p class="fs-3">nabid.hasan909gmail.com | 01924205095</p>
+                   <p class="fs-3">sany.20101011040@cust.edu.bd | 01924205095</p>
                </div>
                <div class="col-lg-4 col-sm-6 col-md-6">
                    <img class="img-fluid me-5" src="./Image/img-1.jpg" alt="">
