--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="container">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <img class="image-fluid nav-img" src="./Image/logo.jpg" alt="">
+              <img id="nav-img" class="image-fluid" src="./Image/logo.jpg" alt="">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
